--- a/style.css
+++ b/style.css
@@ -284,7 +284,7 @@ i {
 	display                             : -ms-flexbox;
 	display                             : flex;
 	visibility                          : hidden;
-	background-color                    : var(--dark-color);
+	background-color                    : #051522;
 	top                                 : -25%;
 	width                               : 100%;
 	height                              : 150%;
@@ -359,13 +359,14 @@ i {
 
 
 
+
+
 @-webkit-keyframes modal_nav_show {
 	from {
 		visibility          : hidden;
 		opacity             : 0;
 		-webkit-transform   : translate(0, 10%);
 		transform           : translate(0, 10%);
-
 	}
 
 	to {
@@ -373,9 +374,10 @@ i {
 		opacity             : .96;
 		-webkit-transform   : translate(0, 0);
 		transform           : translate(0, 0);
-
 	}
 }
+
+
 
 
 
@@ -385,7 +387,6 @@ i {
 		opacity             : 0;
 		-webkit-transform   : translate(0, 10%);
 		transform           : translate(0, 10%);
-
 	}
 
 	to {
@@ -393,9 +394,9 @@ i {
 		opacity             : .96;
 		-webkit-transform   : translate(0, 0);
 		transform           : translate(0, 0);
-
 	}
 }
+
 
 @-webkit-keyframes modal_nav_hide {
 	from {
@@ -403,7 +404,6 @@ i {
 		opacity             : .96;
 		-webkit-transform   : translate(0, 0);
 		transform           : translate(0, 0);
-
 	}
 
 	to {
@@ -411,9 +411,9 @@ i {
 		opacity             : 0;
 		-webkit-transform   : translate(0, -10%);
 		transform           : translate(0, -10%);
-
 	}
 }
+
 
 @keyframes modal_nav_hide {
 	from {
@@ -421,7 +421,6 @@ i {
 		opacity             : .96;
 		-webkit-transform   : translate(0, 0);
 		transform           : translate(0, 0);
-
 	}
 
 	to {
@@ -429,7 +428,6 @@ i {
 		opacity             : 0;
 		-webkit-transform   : translate(0, -10%);
 		transform           : translate(0, -10%);
-
 	}
 }
 
@@ -440,8 +438,8 @@ i {
 	opacity                      : .96;
 	-webkit-animation-name       : modal_nav_show;
 	animation-name               : modal_nav_show;
-	-webkit-animation-duration   : .3s;
-	animation-duration           : .3s;
+	-webkit-animation-duration   : .1s;
+	animation-duration           : .1s;
 }
 
 .mobile_modal_nav.hide {
